[gd_scene load_steps=3 format=3 uid="uid://y14cyyhylnpr"]

[ext_resource type="Script" uid="uid://bho1ip4op3u5t" path="res://addons/quest_weaver/ui/node_properties/quest_context_node_editor.gd" id="1_wjy1a"]
[ext_resource type="Script" uid="uid://c6oph8cilr6lc" path="res://addons/quest_weaver/ui/components/tab_focus_text_edit.gd" id="2_4lwel"]

[node name="QuestContextNodeEditor" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_wjy1a")

[node name="QuestIdEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_vertical = 0
focus_neighbor_top = NodePath("../VSplitContainer/LogOnStartEdit")
focus_neighbor_bottom = NodePath("../HBoxContainer/QuestTypePicker")
placeholder_text = "Quest ID"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Quest Type: "

[node name="QuestTypePicker" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../../QuestIdEdit")
focus_neighbor_bottom = NodePath("../../TitleEdit")

[node name="TitleEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_vertical = 0
focus_neighbor_top = NodePath("../HBoxContainer/QuestTypePicker")
focus_neighbor_bottom = NodePath("../VSplitContainer/DescriptionEdit")
placeholder_text = "Quest Title"

[node name="VSplitContainer" type="VSplitContainer" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="DescriptionEdit" type="TextEdit" parent="VSplitContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
focus_neighbor_top = NodePath("../../TitleEdit")
focus_neighbor_bottom = NodePath("../LogOnStartEdit")
placeholder_text = "Quest Description"
wrap_mode = 1
script = ExtResource("2_4lwel")

[node name="LogOnStartEdit" type="TextEdit" parent="VSplitContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../DescriptionEdit")
focus_neighbor_bottom = NodePath("../../QuestIdEdit")
placeholder_text = "(Optional Log)"
wrap_mode = 1
script = ExtResource("2_4lwel")
